# tg_bot_food

./: .gitignore
tg_api/food/: docker-compose.yml  pyproject.toml
tg_api/food/conf/: .env  .env.example
tg_api/food/docker/: Dockerfile
tg_api/food/food/: settings.py  urls.py
tg_api/food/food_free_app/: admin.py  apps.py  choices.py  constants.py  models.py  signals.py
tg_api/food/food_free_app/migrations/: 0001_initial.py  0001_initial.py~  0002_change_db_coloumn.py~
tg_api/food/scripts/postgres/: start.sql
tg_api/food/scripts/web/: create_superuser.sh  startup.sh
tg_api/food_api/: docker-compose.yml  pyproject.toml
tg_api/food_api/conf/: .env  .env.example  config.py
tg_api/food_api/docker/: Dockerfile
tg_api/food_api/nginx/: Dockerfile  nginx.conf
tg_api/food_api/scripts/web/: startup.sh
tg_api/food_api/webapp/: __main__.py  main.py
tg_api/food_api/webapp/api/: api.py  auth.py  feedback.py  minio.py  product.py  search.py  shop.py  test.py
tg_api/food_api/webapp/db/: postgres.py
tg_api/food_api/webapp/models/: base.py  meta.py
tg_bot/: docker-compose.yml  pyproject.toml
tg_bot/conf/: .env  .env.example  config.py
tg_bot/nginx/: nginx.conf
tg_bot/scripts/web/: startup.sh
tg_bot/src/: main.py  main_polling.py
tg_bot/src/api/tg/: api.py  tg.py
tg_bot/src/buttons/feedback/: feedback.py
tg_bot/src/buttons/main/: back.py  (+1 more)
tg_bot/src/integrations/: redis.py  tg_bot.py
tg_bot/src/middleware/: auth.py
tg_bot/src/on_startup/: dispatcher.py  webhook.py
tg_bot/src/states/: main.py
tg_bot/src/utils/: minio.py  request.py
(+33 files in other folders)
