[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
line_length = 120
combine_as_imports = true
order_by_type = true
length_sort_straight = true
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3

[tool.poetry]
name = "food"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.11"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.9"
loguru = "0.7.2"
gunicorn = "22.0.0"
